--- a/state-space-walkthrough.qmd
+++ b/state-space-walkthrough.qmd
@@ -387,10 +387,10 @@ head(story_char_matrix_scaled)
 Ok, now we have:
 
 - Chosen a temporal resolution for the model of `r bin_width` year bins
-- organised the data into a site-by-species matrix $Y$ at `r bin_width` year bins 
--  Binned and scaled covariate matrix $X$
+- Organised the data into a site-by-species matrix $Y$ at `r bin_width` year bins 
+- Binned and scaled covariate matrix $X$
 
-Now we can fit the model.
+With that, we can fit the model.
 
 ### Finding initial conditions using `mnGLMM()`
 
@@ -408,12 +408,12 @@ The arguments of the parameters to be _estimated_ are all suffixed with `.fixed`
 
 Now, lets set up the parameters for `mnGLMM()`. We need:
 
-- a vector that indicates the row indices where there are pollen observations: `sample_idx`
-- the number of covariates (+ 1 for `mnGLMM()`): `p` 
-- the number of state variables: `n`
-- a matrix of starting values for $B$: `B.start.glmm`
-- a matrix of $B$ parameters to estimate: `B.fixed.glmm` 
-- a matrix of $V$ parameters to estimate: `V.fixed.glmm`
+- A vector that indicates the row indices where there are state variable observations: `sample_idx`
+- An integer number of covariates (+ 1 for `mnGLMM()`): `p` 
+- An integer of the number of state variables: `n`
+- A matrix of starting values for $B$: `B.start.glmm`
+- A matrix of $B$ parameters to estimate: `B.fixed.glmm` 
+- A matrix of $V$ parameters to estimate: `V.fixed.glmm`
 
 ```{r}
 #| code-fold: false
@@ -432,6 +432,9 @@ Set-up the remaining parameters:
 p <- ncol(story_char_matrix_scaled) + 1 # Number of independent variables plus intercept
 n <- ncol(story_pollen_matrix) # number of taxa
 V.fixed.glmm <- diag(n)
+diag(V.fixed.glmm) <- NA
+V.fixed.glmm[1] <- 1
+# V.fixed.glmm <- diag(n)
 # V.fixed.glmm <- matrix(NA, n, n)
 # V.fixed.glmm[1] <- 1 # reference taxa/group [1,1] is set to 1
 B.fixed.glmm <- matrix(c(rep(0,p),rep(NA, (n - 1) * p)), p, n) # reference taxa [,1] are set to 0
@@ -443,7 +446,7 @@ These parameters are used as arguments to the `mnGLMM()` function. Check them ou
 
 ::: {.callout-warning}
 ## Common error
-Defining the dimensions of each matrix is slightly different between `mnGLMM()` and `mnTS()`. The $B$ matrix in `mnGLMM()` is the number of covariates + 1 (`p + 1`), and includes the intercept $B0$. `mnTS()` has two arguments $B0$ _and_ $B$.
+Defining the dimensions of each matrix is slightly different between `mnGLMM()` and `mnTS()`. The number of rows in the $B$ matrix in `mnGLMM()` is equal to the number of covariates + 1 (`p + 1`), and includes the intercept $B0$. `mnTS()` has two arguments one for the intercept; $B0$, _and_ a separate one for the covariates; $B$.
 :::
 
 #### Fitting `mnGLMM()`
@@ -452,13 +455,19 @@ Remember that `mnGLMM()` does not handle gaps in the data and only fits complete
 
 ```{r}
 #| code-fold: false
+#| warning: false
 # fit glmm
+start_time <- Sys.time()
 glmm_mod <- mnGLMM(Y = story_pollen_matrix[sample_idx, ],
                    X = story_char_matrix_scaled[sample_idx, ,drop = F],
                    B.start = B.start.glmm,
                    B.fixed = B.fixed.glmm,
                    V.fixed = V.fixed.glmm)
+end_time <- Sys.time()
+end_time - start_time
 ```
+
+The outputs of `mnGLMM()` can be examined with the `summary(glmm_mod)` and `coef(glmm_mod)` functions. We are going to skip this for now because the output of `mnGMLL()` is similar to `mnTS()`, only, without the $C$ matrix. For this demonstration we will look at the output of `mnTS()` as the same concepts apply...
 
 
 #### Setting-up parameters for `mnTS()`
@@ -480,39 +489,49 @@ Now, lets set up the parameters for `mnTS()`. `mTS()` needs:
   - $C$: `C.fixed.mnTS`
   - $V$: `V.fixed.mnTS`
 
-We are using the output from `mnGLMM()` as starting values for the matrices $B0$, $B$, and $V$. `mnGLMM()` does not provide estimates for $C$ so we handle $C$ a little differently any input values close to zero for each parameter estimated and let `mnTS()` do the rest.
+We are using the output from `mnGLMM()` as starting values for the matrices $B0$, $B$, and $V$. `mnGLMM()` does not provide estimates for $C$, so we handle $C$ a little differently and we input values close to zero for each parameter estimated and let `mnTS()` do the rest. 
 
 
 ```{r}
+#| code-fold: false
 # B.start etc
-B0.start <- glmm_mod$B[1, , drop = F]
-B.start <- glmm_mod$B[2, , drop = F]
+B0.start.mnTS <- glmm_mod$B[1, , drop = F]
+B.start.mnTS <- glmm_mod$B[2, , drop = F]
 
-sigma.start <- glmm_mod$sigma
+sigma.start.mnTS <- glmm_mod$sigma
 
-V.fixed = matrix(NA, n, n) # Covariance matrix of environmental variation in process eq
-V.fixed[1] = 1
+V.fixed.mnTS = matrix(NA, n, n) # Covariance matrix of environmental variation in process eq
+V.fixed.mnTS[1] = 1
 
-V.start = V.fixed
-V.start <- glmm_mod$V
+V.start.mnTS = V.fixed.mnTS
+V.start.mnTS <- glmm_mod$V
 # V.start <- diag(diag(V.start))
 
-B.fixed <- matrix(NA, p-1, n)
-B.fixed[,1] <- 0
-B0.fixed = matrix(c(0, rep(NA, n - 1)), nrow = 1, ncol = n)
+B.fixed.mnTS <- matrix(NA, p-1, n)
+B.fixed.mnTS[,1] <- 0
+B0.fixed.mnTS = matrix(c(0, rep(NA, n - 1)), nrow = 1, ncol = n)
 
+# Set-up C without interactions
+C.start.mnTS = .5 * diag(n)
+C.fixed.mnTS <- C.start.mnTS
+C.fixed.mnTS[C.fixed.mnTS != 0] <- NA
 
-C.start = .5 * diag(n)
-C.fixed <- C.start
-C.fixed[C.fixed != 0] <- NA
+# Set-up C with interactions
 
-
+C.start.int.mnTS = .5 * diag(n)
+C.start.int.mnTS[5, 4] <- .001
+C.start.int.mnTS[4, 5] <- .001
+C.fixed.int.mnTS <- C.start.int.mnTS
+C.fixed.int.mnTS[C.fixed.int.mnTS != 0] <- NA
 
 ```
 
 #### Fitting `mnTS()`
 
-We will fit the model twice: without taxa interactions, and without taxa interactions. Remember, interactions are handled in the $C$ matrix.
+Remember, `mnTS()` _does_ handle gaps in the state-variables where there are data in the covariate matrix. In the following code, we use the complete (no gaps) $Y$ matrix `story_pollen_matrix[sample_idx, ]` with dimensions: `r dim(story_pollen_matrix[sample_idx, ])`. And the full $X$ matrix: `story_char_matrix_scaled` with dimensions: `r dim(story_char_matrix_scaled)`
+We will fit the model twice: 
+- without taxa interactions
+- and without taxa interactions. 
 
 ::: {.panel-tabset}
 
@@ -521,32 +540,91 @@ We will fit the model twice: without taxa interactions, and without taxa interac
 ```{r}
 #| code-fold: false
 
-mnTS_nod <- mnTS(Y = story_pollen_matrix[sample_idx, ],
-               X = story_char_matrix_scaled, Tsample = sample_idx,
-               B0.start = B0.start, B0.fixed = B0.fixed,
-               B.start = B.start, B.fixed = B.fixed, 
-               C.start = C.start, C.fixed = C.fixed, 
-               V.fixed = V.fixed, V.start = V.start,
-               dispersion.fixed = 1, maxit.optim = 1e+06)
+start_time <- Sys.time()
+mnTS_mod <- mnTS(Y = story_pollen_matrix[sample_idx, ],
+                 X = story_char_matrix_scaled, Tsample = sample_idx,
+                 B0.start = B0.start.mnTS, B0.fixed = B0.fixed.mnTS,
+                 B.start = B.start.mnTS, B.fixed = B.fixed.mnTS,
+                 C.start = C.start.mnTS, C.fixed = C.fixed.mnTS,
+                 V.start = V.start.mnTS, V.fixed = V.fixed.mnTS,
+                 dispersion.fixed = 1, maxit.optim = 1e+06)
 # maxit.optim is the max number of iterations the optimiser will complete before stopping.
 # increase maxit.optim if the model needs a lot of time to fit.
+end_time <- Sys.time()
+end_time - start_time
+saveRDS(mnTS_mod, "./outputs/mnTS_mod.rds")
 
-# summary(mnTS_nod)
-# boot.mnTS(mnTS_nod, 3)
-# coef(mnTS_nod)
-# simulate(mnTS_nod)
+# summary(mnTS_mod)
+# boot.mnTS(mnTS_mod, 3)
+# coef(mnTS_mod)
+# simulate(mnTS_mod)
 
 ```
 
 ```{r}
-coef(mnTS_nod)
+coef(mnTS_mod)
 ```
 
 ## With interactions
 
-
 ```{r}
+#| code-fold: false
 
+start_time <- Sys.time()
+mnTS_mod_int <- mnTS(Y = story_pollen_matrix[sample_idx, ],
+                     X = story_char_matrix_scaled, Tsample = sample_idx,
+                     B0.start = B0.start.mnTS, B0.fixed = B0.fixed.mnTS,
+                     B.start = B.start.mnTS, B.fixed = B.fixed.mnTS,
+                     C.start = C.start.int.mnTS, C.fixed = C.fixed.int.mnTS,
+                     V.start = mnTS_mod$V, V.fixed = V.fixed.mnTS,
+                     dispersion.fixed = 1, maxit.optim = 1e+06)
+end_time <- Sys.time() 
+end_time - start_time # took 10.38881 mins for me
+saveRDS(mnTS_mod_int, "./outputs/mnTS_mod_int.rds")
+
+start_time <- Sys.time()
+mnTS_mod_int2 <- mnTS(Y = story_pollen_matrix[sample_idx, ],
+                      X = story_char_matrix_scaled, Tsample = sample_idx,
+                      B0.start = B0.start.mnTS, B0.fixed = B0.fixed.mnTS,
+                      B.start = B.start.mnTS, B.fixed = B.fixed.mnTS,
+                      C.start = C.start.int.mnTS, C.fixed = C.fixed.int.mnTS,
+                      V.start = V.start.mnTS, V.fixed = V.fixed.mnTS,
+                      dispersion.fixed = 1, maxit.optim = 1e+06)
+end_time <- Sys.time() 
+end_time - start_time
+
+start_time <- Sys.time()
+mnTS_mod_int3 <- mnTS(Y = story_pollen_matrix[sample_idx, ],
+                      X = story_char_matrix_scaled, Tsample = sample_idx,
+                      B0.start = mnTS_mod_int$B0, B0.fixed = B0.fixed.mnTS,
+                      B.start = mnTS_mod_int$B, B.fixed = B.fixed.mnTS,
+                      C.start = mnTS_mod_int$C, C.fixed = C.fixed.int.mnTS,
+                      V.start = mnTS_mod_int$V, V.fixed = V.fixed.mnTS,
+                      dispersion.fixed = 1, maxit.optim = 1e+06)
+end_time <- Sys.time() 
+end_time - start_time
+
+start_time <- Sys.time()
+mnTS_mod_int4 <- mnTS(Y = story_pollen_matrix[sample_idx, ],
+                      X = story_char_matrix_scaled, Tsample = sample_idx,
+                      B0.start = mnTS_mod_int2$B0, B0.fixed = B0.fixed.mnTS,
+                      B.start = mnTS_mod_int2$B, B.fixed = B.fixed.mnTS,
+                      C.start = mnTS_mod_int2$C, C.fixed = C.fixed.int.mnTS,
+                      V.start = mnTS_mod_int2$V, V.fixed = V.fixed.mnTS,
+                      dispersion.fixed = 1, maxit.optim = 1e+06)
+end_time <- Sys.time() 
+end_time - start_time
+
+start_time <- Sys.time()
+mnTS_mod_int4 <- mnTS(Y = story_pollen_matrix[sample_idx, ],
+                      X = story_char_matrix_scaled, Tsample = sample_idx,
+                      B0.start = mnTS_mod_int3$B0, B0.fixed = B0.fixed.mnTS,
+                      B.start = mnTS_mod_int3$B, B.fixed = B.fixed.mnTS,
+                      C.start = mnTS_mod_int3$C, C.fixed = C.fixed.int.mnTS,
+                      V.start = mnTS_mod_int3$V, V.fixed = V.fixed.mnTS,
+                      dispersion.fixed = 1, maxit.optim = 1e+06)
+end_time <- Sys.time() 
+end_time - start_time
 ```
 
 :::
@@ -561,10 +639,15 @@ The `coef()` and `summary()` functions will show the model outputs. Let's check 
 
 We won't delve into comparing individual coefficient values between the two models here. Doing so is important to interpreting the ecological meaning of the data, and requires strong ecological knowledge of the study system. Although that is one of the most interesting parts, it is a little beyond what we can fit into a workshop around how to fit the model!
 
-### Comparing AIC
+### Comparing models
 
+The `summary` of the model provides both the log likelihood and the AIC (akaike information criterion). These can be used for comparing models. Today we will use the AIC. AIC is penalised for the number of parameters estimated, and so can be better for comparing models where one has more parameters estimated (i.e., the interaction model is estimating more parameters than the model without interactions).
 
-
+The AIC (and log likelihood) values can be accessed directly with `mnTS_mod_int$AIC`.
+```{r}
+data.frame(without_interactions = mnTS_mod_int$AIC,
+           with_interactions = mnTS_mod$AIC)
+```
 
 ### Re-fitting if necessary
 
@@ -579,7 +662,7 @@ As an example, let's refit the interaction model:
 
 ## Hypothesis testing
 
-There may be circumstances where coefficients change substantially by fitting the model in alternative ways, e.g., with or without interactions, of different covariates. We can use the post-hoc statistical tests like AIC and likelihood ratio tests to give some statistical support to one model or another. However, in the context of palaeoecological data at least, there is no known correct answer. We can only use the results to lend statistical support to multiple potential hypotheses. Palaeo-data lacks experimental manipulation and direct observation, so we suggest setting up multiple working hypotheses (i.e., @chamberlin1897), testing components of those hypotheses by fitting `multinomialTS` under different conditions, and finally assessing the statistical support lent to each hypotheses within the context of ecological knowledge.
+There may be circumstances where coefficients change substantially by fitting the model in alternative ways, e.g., with or without interactions, of different covariates. We can use the post-hoc statistical tests like AIC and likelihood ratio tests to give some statistical support to one model or another. However, in the context of palaeoecological data at least, there is no known correct answer. We can only use the results to lend statistical support to multiple potential hypotheses. Palaeo-data lacks experimental manipulation and direct observation, so we suggest setting up multiple working hypotheses [i.e., @chamberlin1897], testing components of those hypotheses by fitting `multinomialTS` under different conditions, and finally assessing the statistical support lent to each hypotheses within the context of ecological knowledge.
 
 
 ## To do
@@ -587,3 +670,4 @@ There may be circumstances where coefficients change substantially by fitting th
 - [ ] attendance list
 - [ ] session hand-out?
 - [ ] feedback?
+- [ ] posit cloud
